--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <!-- Eigene CSS Styles -->
     <link rel="stylesheet" href="./style.css">
     <title>Password Gen</title>
 </head>
@@ -33,7 +32,7 @@
         </div>
 
         <input type="text" id="genPasw" class="outputlabel">
-        <button class="btn" id="generateBtn">Generate</button>
+        <button class="btn" id="generateBtn"><i class="fas fa-key"></i> Create Password </button>
     </div>
 
     <script src="./app.js"></script>
