Copy Button hinzugefügt

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
             </p>
         </div>
 
-        <input type="text" id="genPasw" class="outputlabel">
+        <div class="outputCopyDiv">
+            <input type="text" id="genPasw" class="outputlabel">
+            <button class="copyButton" id="copyButton" onclick="copyPsw()"><i class="fas fa-copy" id="copyBtnIcon"></i></button>
+        </div>
+
         <button class="btn" id="generateBtn"><i class="fas fa-key"></i> Create Password </button>
     </div>
 
